--- a/starter-code/output.css
+++ b/starter-code/output.css
@@ -1,4 +1,5 @@
 /*! tailwindcss v4.1.3 | MIT License | https://tailwindcss.com */
+@import url(./assets/fonts/MouseMemoirs-Regular.ttf);
 @layer properties;
 @layer theme, base, components, utilities;
 @layer theme {
@@ -7,6 +8,9 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-white: #fff;
+    --spacing: 0.25rem;
+    --font-weight-bold: 700;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -157,26 +161,170 @@
   }
 }
 @layer utilities {
+  .absolute {
+    position: absolute;
+  }
+  .relative {
+    position: relative;
+  }
   .static {
     position: static;
+  }
+  .-top-26 {
+    top: calc(var(--spacing) * -26);
+  }
+  .top-2 {
+    top: calc(var(--spacing) * 2);
+  }
+  .left-11 {
+    left: calc(var(--spacing) * 11);
+  }
+  .left-\[11px\] {
+    left: 11px;
+  }
+  .m-auto {
+    margin: auto;
+  }
+  .mt-10 {
+    margin-top: calc(var(--spacing) * 10);
   }
   .contents {
     display: contents;
   }
+  .flex {
+    display: flex;
+  }
   .table {
     display: table;
+  }
+  .h-13 {
+    height: calc(var(--spacing) * 13);
+  }
+  .h-16 {
+    height: calc(var(--spacing) * 16);
+  }
+  .h-31 {
+    height: calc(var(--spacing) * 31);
+  }
+  .h-\[13px\] {
+    height: 13px;
+  }
+  .h-\[31px\] {
+    height: 31px;
+  }
+  .h-\[500px\] {
+    height: 500px;
   }
   .h-screen {
     height: 100vh;
   }
+  .w-64 {
+    width: calc(var(--spacing) * 64);
+  }
+  .w-119 {
+    width: calc(var(--spacing) * 119);
+  }
+  .w-\[119\] {
+    width: 119;
+  }
+  .w-\[119px\] {
+    width: 119px;
+  }
+  .w-\[240px\] {
+    width: 240px;
+  }
+  .w-\[592px\] {
+    width: 592px;
+  }
+  .w-full {
+    width: 100%;
+  }
   .w-screen {
     width: 100vw;
+  }
+  .border-collapse {
+    border-collapse: collapse;
   }
   .transform {
     transform: var(--tw-rotate-x) var(--tw-rotate-y) var(--tw-rotate-z) var(--tw-skew-x) var(--tw-skew-y);
   }
-  .bg-\[black\] {
-    background-color: black;
+  .cursor-pointer {
+    cursor: pointer;
+  }
+  .resize {
+    resize: both;
+  }
+  .flex-col {
+    flex-direction: column;
+  }
+  .flex-wrap {
+    flex-wrap: wrap;
+  }
+  .items-baseline {
+    align-items: baseline;
+  }
+  .items-center {
+    align-items: center;
+  }
+  .justify-around {
+    justify-content: space-around;
+  }
+  .justify-center {
+    justify-content: center;
+  }
+  .gap-4 {
+    gap: calc(var(--spacing) * 4);
+  }
+  .gap-7 {
+    gap: calc(var(--spacing) * 7);
+  }
+  .gap-8 {
+    gap: calc(var(--spacing) * 8);
+  }
+  .gap-16 {
+    gap: calc(var(--spacing) * 16);
+  }
+  .gap-32 {
+    gap: calc(var(--spacing) * 32);
+  }
+  .gap-\[400px\] {
+    gap: 400px;
+  }
+  .rounded {
+    border-radius: 0.25rem;
+  }
+  .rounded-\[96px\] {
+    border-radius: 96px;
+  }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
+  .bg-\[\#261676\] {
+    background-color: #261676;
+  }
+  .bg-\[white\] {
+    background-color: white;
+  }
+  .bg-white {
+    background-color: var(--color-white);
+  }
+  .text-\[40px\] {
+    font-size: 40px;
+  }
+  .font-\[40px\] {
+    --tw-font-weight: 40px;
+    font-weight: 40px;
+  }
+  .font-bold {
+    --tw-font-weight: var(--font-weight-bold);
+    font-weight: var(--font-weight-bold);
+  }
+  .text-\[white\] {
+    color: white;
+  }
+  .underline {
+    text-decoration-line: underline;
   }
   .outline {
     outline-style: var(--tw-outline-style);
@@ -185,6 +333,89 @@
   .filter {
     filter: var(--tw-blur,) var(--tw-brightness,) var(--tw-contrast,) var(--tw-grayscale,) var(--tw-hue-rotate,) var(--tw-invert,) var(--tw-saturate,) var(--tw-sepia,) var(--tw-drop-shadow,);
   }
+}
+body {
+  margin: 0;
+  padding: 0;
+}
+* {
+  box-sizing: border-box;
+}
+main {
+  background-image: url(./assets/images/background-desktop.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+h1 {
+  font-family: "Mouse Memoirs", sans-serif;
+}
+[data-name="play_heading"] {
+  background: linear-gradient(#344ABA, rgba(0, 20, 121, 0.83));
+  border-radius: 72px;
+}
+button#rules {
+  background-color: #2463FF;
+  font-family: "Mouse Memoirs", sans-serif;
+  color: white;
+  font-weight: 500;
+  font-size: 25px;
+  letter-spacing: 5%;
+  margin-top: 70px;
+  border-radius: 40px;
+  cursor: pointer;
+}
+div.back_btn {
+  background-image: url(./assets/images/Group\ 56.png);
+  width: 94px;
+  height: 94px;
+}
+aside.rule {
+  background-color: white;
+  border-radius: 40px;
+  width: 384px;
+  height: 550px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 40px;
+  padding: 50px 48px 0 48px;
+}
+aside.rule h3 {
+  font-family: "Mouse Memoirs", sans-serif;
+  font-weight: 400;
+  font-size: 80px;
+  line-height: 120%;
+  color: #2463FF;
+}
+aside.rule p {
+  font-family: "Mouse Memoirs", sans-serif;
+  font-weight: 500;
+  font-size: 30px;
+  line-height: 120%;
+  letter-spacing: 5%;
+}
+aside.rule article {
+  font-family: "Mouse Memoirs", sans-serif;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 120%;
+  letter-spacing: 5%;
+}
+aside.category {
+  width: 384px;
+  height: 190px;
+  border-radius: 40px;
+  background-color: #2463FF;
+  color: white;
+  font-size: 30px;
+  font-family: "Mouse Memoirs", sans-serif;
+  font-weight: 500;
+  cursor: pointer;
+}
+div.menu_btn {
+  background-image: url(./assets/images/burger_menu.png);
+  width: 94px;
+  height: 94px;
 }
 @property --tw-rotate-x {
   syntax: "*";
@@ -210,6 +441,15 @@
   syntax: "*";
   inherits: false;
   initial-value: skewY(0);
+}
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@property --tw-font-weight {
+  syntax: "*";
+  inherits: false;
 }
 @property --tw-outline-style {
   syntax: "*";
@@ -277,6 +517,8 @@
       --tw-rotate-z: rotateZ(0);
       --tw-skew-x: skewX(0);
       --tw-skew-y: skewY(0);
+      --tw-border-style: solid;
+      --tw-font-weight: initial;
       --tw-outline-style: solid;
       --tw-blur: initial;
       --tw-brightness: initial;
