--- a/starter-code/input.css
+++ b/starter-code/input.css
@@ -89,3 +89,16 @@ div.menu_btn{
     width: 94px;
     height: 94px;
 }
+
+div.letter{
+  width: 112px;
+  height: 128px;
+  color: white;
+  background-color: #2463FF;  
+  font-size: 60px;
+  font-weight: 600;
+  border-radius: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
